namespace PokerLib
{
    public enum HandType
    {
        Incomplete = -1,
        HighCard,
        Pair,
        TwoPairs,
        ThreeOfAKind,
        Straight,
        Flush,
        FullHouse,
        FourOfAKinds,
        StraightFlush
    }
}