namespace PokerLib
{
    public enum Suite
    {
        Clubs = 1,
        Diamonds,
        Hearts,
        Spades
    }
}